# Laba-4.2

Laba 4.2/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  RightTriangle.cpp  RightTriangle.h  Shape.h  Trapezoid.cpp  Trapezoid.h  main.cpp
